--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/crypto-js": "^4.1.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto-js": "^4.2.0",
     "mysql2": "^3.6.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
